--- a/src/requestmanager/RRM_SeatStatus1.fxml
+++ b/src/requestmanager/RRM_SeatStatus1.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="seatPane" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #f0f0f0;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="requestmanager.SeatStatusController">
    <children>
-      <HBox layoutX="46.0" layoutY="120.0" spacing="40.0">
+      <HBox layoutX="37.0" layoutY="118.0" spacing="40.0">
          <children>
             <VBox spacing="20.0">
                <children>
@@ -309,7 +309,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="77.0" layoutY="470.0" text="예약된 좌석 수:">
+      <Label layoutX="77.0" layoutY="470.0" text="예매된 좌석 수:">
          <font>
             <Font size="14.0" />
          </font>
@@ -323,8 +323,8 @@
             <Font size="17.0" />
          </font>
       </Label>
-      <Button layoutX="557.0" layoutY="450.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="예약 접수 시작" />
-      <Button layoutX="674.0" layoutY="450.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="예약 접수 종료" />
+      <Button fx:id="btnReserveStart" layoutX="571.0" layoutY="479.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="예약 접수 시작" />
+      <Button fx:id="btnReserveEnd" layoutX="686.0" layoutY="479.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="예약 접수 종료" />
       <Label layoutX="105.0" layoutY="519.0" text="총 좌석 수:">
          <font>
             <Font size="14.0" />
@@ -335,6 +335,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Button fx:id="btnRRM" layoutX="716.0" layoutY="546.0" mnemonicParsing="false" onAction="#moveToRRM" prefHeight="40.0" prefWidth="70.0" text="뒤로가기" />
+      <Button fx:id="btnRRM" layoutX="715.0" layoutY="426.0" mnemonicParsing="false" onAction="#moveToRRM" prefHeight="40.0" prefWidth="70.0" text="뒤로가기" />
+      <Button fx:id="btnReserve" layoutX="456.0" layoutY="479.0" mnemonicParsing="false" onAction="#moveToCharge" prefHeight="40.0" prefWidth="100.0" text="예매하기" />
    </children>
 </AnchorPane>
