--- a/src/requestmanager/RegistrationRequestManager.fxml
+++ b/src/requestmanager/RegistrationRequestManager.fxml
@@ -4,60 +4,68 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="requestmanager.RegistrationRequestManagerController">
-   <left>
-      <VBox prefHeight="537.0" prefWidth="282.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox prefHeight="100.0">
+<StackPane fx:id="stackPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="requestmanager.RegistrationRequestManagerController">
+   <children>
+      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0">
+         <left>
+            <VBox prefHeight="537.0" prefWidth="282.0" BorderPane.alignment="CENTER">
                <children>
-                  <TextField fx:id="searchField" maxHeight="1.7976931348623157E308" onAction="#searchAction" prefHeight="22.0" prefWidth="200.0" promptText="콘서트명" />
-                  <Button maxHeight="1.7976931348623157E308" mnemonicParsing="false" prefHeight="22.0" prefWidth="50.0" text="검색" />
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <TextField fx:id="searchField" onAction="#searchAction" prefHeight="22.0" prefWidth="200.0" promptText="콘서트명" />
+                        <Button mnemonicParsing="false" prefHeight="22.0" prefWidth="50.0" text="검색" />
+                     </children>
+                  </HBox>
+                  <ListView fx:id="concertListView" prefHeight="565.0" prefWidth="257.0">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </ListView>
                </children>
-            </HBox>
-            <ListView fx:id="concertListView" prefHeight="335.0" prefWidth="242.0">
-               <VBox.margin>
+               <BorderPane.margin>
                   <Insets />
-               </VBox.margin>
+               </BorderPane.margin>
+               <padding>
+                  <Insets bottom="80.0" left="40.0" top="40.0" />
+               </padding>
+            </VBox>
+         </left>
+         <top>
+            <Label text="콘서트 등록 요청하기" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets top="40.0" />
+               </BorderPane.margin>
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+         </top>
+         <center>
+            <ListView fx:id="dateSelectList" prefHeight="200.0" prefWidth="254.0" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets bottom="80.0" top="40.0" />
+               </BorderPane.margin>
             </ListView>
-         </children>
-         <BorderPane.margin>
-            <Insets />
-         </BorderPane.margin>
-         <padding>
-            <Insets bottom="80.0" left="40.0" top="40.0" />
-         </padding>
-      </VBox>
-   </left>
-   <top>
-      <Label text="콘서트 등록 요청하기" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets top="40.0" />
-         </BorderPane.margin>
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-   </top>
-   <right>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="btnRequest" layoutX="50.0" layoutY="39.0" mnemonicParsing="false" onAction="#moveToRequest" prefHeight="50.0" prefWidth="100.0" text="등록 요청" />
-            <Button fx:id="btnRequestCancel" layoutX="50.0" layoutY="130.0" mnemonicParsing="false" onAction="#requestCancel" prefHeight="50.0" prefWidth="100.0" text="취소 요청" />
-            <Button fx:id="btnCharge" layoutX="50.0" layoutY="219.0" mnemonicParsing="false" onAction="#moveToCharge" prefHeight="50.0" prefWidth="100.0" text="확정 &amp; 결제" />
-            <Button fx:id="btnSeatStatus" layoutX="50.0" layoutY="307.0" mnemonicParsing="false" onAction="#moveToSeatStatus" prefHeight="50.0" prefWidth="100.0" text="자리 현황" />
-            <Button fx:id="btnMain" layoutX="116.0" layoutY="383.0" mnemonicParsing="false" onAction="#moveToMain" prefHeight="40.0" prefWidth="70.0" text="뒤로가기" />
-         </children>
-      </AnchorPane>
-   </right>
-   <center>
-      <TextArea fx:id="selectedConcertInfo" maxHeight="-Infinity" prefHeight="275.0" prefWidth="318.0" BorderPane.alignment="CENTER_LEFT" />
-   </center>
-</BorderPane>
+         </center>
+         <right>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Button fx:id="btnRequest" layoutX="50.0" layoutY="39.0" mnemonicParsing="false" onAction="#moveToRequest" prefHeight="50.0" prefWidth="100.0" text="등록 요청" />
+                  <Button fx:id="btnRequestCancel" layoutX="50.0" layoutY="130.0" mnemonicParsing="false" onAction="#requestCancel" prefHeight="50.0" prefWidth="100.0" text="등록 요청 취소" />
+                  <Button fx:id="btnCharge" layoutX="50.0" layoutY="219.0" mnemonicParsing="false" onAction="#moveToCharge" prefHeight="50.0" prefWidth="100.0" text="확정 &amp; 결제" />
+                  <Button fx:id="btnSeatStatus" layoutX="50.0" layoutY="307.0" mnemonicParsing="false" onAction="#moveToSeatStatus" prefHeight="50.0" prefWidth="100.0" text="자리 현황" />
+                  <Button fx:id="btnMain" layoutX="116.0" layoutY="383.0" mnemonicParsing="false" onAction="#moveToMain" prefHeight="40.0" prefWidth="70.0" text="뒤로가기" />
+               </children>
+            </AnchorPane>
+         </right>
+      </BorderPane>
+   </children>
+</StackPane>
